--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ date_format: "%B %-d, %Y"
 #################################################################################
 
 # Output options (more information on Jekyll's site)
-timezone: "Japan/Tokyo"
+timezone: "Australia/Brisbane"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
